Thu Jul 25 08:10:52 2002  Priyanka Gontla  <pgontla@ece.uci.edu>


Thu Jul 25 08:05:47 2002  Priyanka Gontla  <pgontla@ece.uci.edu>

	* orbsvcs/PSS/PSDL.ll:
	* orbsvcs/PSS/PSDL.yy:
	* orbsvcs/PSS/PSDL_l.cpp:
	* orbsvcs/PSS/PSDL_y.cpp:
	* orbsvcs/PSS/PSDL_y.h:
	* orbsvcs/PSS/PSDL_Interpreter.cpp:
	* orbsvcs/PSS/PSDL_Interpreter.h:

	  The Lex and the Yacc files and the related classes to build an 
	  abstract syntax tree for the Persistent State Definition
	  Language. PSDL is a superset of the IDL. This is needed for the
	  Persistent State Service (PSS). 

	* orbsvcs/PSS/Makefile:
	* orbsvcs/PSS/Makefile.parser:
	  Makefiles to build the libTAO_PSDL, libTAO_PSDL_Datastore 
	  and the actual PSDL parser, psdl_tao, which is similar to
	  tao_idl for the IDL.		

	* orbsvcs/PSS/PSDL.dsp:
	* orbsvcs/PSS/PSDL_Datastore.dsp:
	* orbsvcs/PSS/PSDL_Parser.dsp:
	* orbsvcs/PSS/PSDL.dsw:
	  The workspace and the project files for windows.
	
	* orbsvcs/PSS/Dump_Visitor.cpp:
	* orbsvcs/PSS/Dump_Visitor.h:
	* orbsvcs/PSS/psdl_tao.cpp:
	  The classes for the psdl_tao executable. Dump_Visitor is used to
	  print out the abstract tree, just in case, someone wants to view
	  it. The psdl_tao.cpp reads the input file and invokes the accept
	  method which will start the yacc-lex parsing of the input file.

	* orbsvcs/PSS/Makefile.datastore:
	  Makefile for building libTAO_PSDL_Datastore

	  For making the services persistent, we save the object->IOR
 	  mapping in a persistent way. Could be writing to a database,
	  which can be a simple file or an actual database. Please read
	  the README for more about this and the future plans with regards
	  to this.

	  This library provides support to write and read the persistent
	  data.
	
	* orbsvcs/PSS/PSDL_Code_Gen.cpp:
	* orbsvcs/PSS/PSDL_Code_Gen.h:
	  This class acts as the interface to the datastore which is used
	  by the PSS. Before actually saving the object-name stringified